--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "^2.9.2"
 djangorestframework = "^3.12.4"
 Markdown = "^3.3.6"
 django-filter = "^21.1"
+drf-spectacular = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
