--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "^3.12.4"
 Markdown = "^3.3.6"
 django-filter = "^21.1"
 drf-spectacular = "^0.21.0"
+social-auth-app-django = "^5.0.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
