--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ gunicorn = "^20.1.0"
 Django = "^3.2.9"
 django-cors-headers = "^3.10.0"
 psycopg2 = "^2.9.2"
+aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
