--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ Markdown = "^3.3.6"
 django-filter = "^21.1"
 drf-spectacular = "^0.21.0"
 social-auth-app-django = "^5.0.0"
+celery = "^5.2.1"
+redis = "^4.0.2"
+flower = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
